You can now filter the active memory pane by type. Add excludes for the analytics language pane too. Try to avoid rid queries when we already have the rids. Use GetListByCanSee instead of GetList for preloads to increase the chances of getting something useful. Provisionally extend topic preloading to the first three topic list pages.
Add the panel_statistics_memory_type_total phrase.
Add the panel_statistics_memory_type_stack phrase.
Add the panel_statistics_memory_type_heap phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -889,6 +889,9 @@
 
 		"panel_statistics_spam_hide":"Hide Spam",
 		"panel_statistics_spam_show":"Show Spam",
+		"panel_statistics_memory_type_total":"Total",
+		"panel_statistics_memory_type_stack":"Stack",
+		"panel_statistics_memory_type_heap":"Heap",
 
 		"panel_statistics_time_range_one_year":"1 year",
 		"panel_statistics_time_range_three_months":"3 months",
