Add more tables to the Debug Page. Localise more parts of the Control Panel Dashboard.
Added 11 new phrases.

--- a/langs/english.json
+++ b/langs/english.json
@@ -768,9 +768,20 @@
 		"panel_dashboard_guests_online_desc":"The number of guests who are currently online",
 		"panel_dashboard_users_online":"%d%s users online",
 		"panel_dashboard_users_online_desc":"The number of logged-in users who are currently online",
+		"panel_dashboard_posts":"%d posts %s",
+		"panel_dashboard_posts_desc":"The number of new posts over the last 24 hours",
+		"panel_dashboard_topics":"%d topics %s",
+		"panel_dashboard_topics_desc":"The number of new topics over the last 24 hours",
+		"panel_dashboard_online_day": "?? online / day",
+		"panel_dashboard_searches_day": "?? searches / week",
+		"panel_dashboard_new_users":"%d new users %s",
+		"panel_dashboard_new_users_desc":"The number of new users over the last 7 days",
+		"panel_dashboard_reports":"%d reports %s",
+		"panel_dashboard_reports_desc":"The number of reports over the last 7 days",
 		"panel_dashboard_day_suffix":" / day",
 		"panel_dashboard_week_suffix":" / week",
 		"panel_dashboard_coming_soon":"Coming Soon!",
+		"panel_dashboard_unknown":"Unknown",
 
 		"panel_users_head":"Users",
 		"panel_users_profile":"Profile",
