langf now works in transpiled templates, albeit a little inefficiently.
Removed the quick_topic.add_poll_option phrase.
Added the quick_topic.add_poll_option_first phrase.
Changed the topic.reply_add_poll_option phrase.
Added the topic.reply_add_poll_option_first phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -546,7 +546,7 @@
 		"quick_topic.avatar_alt":"Your Avatar",
 		"quick_topic.whatsup":"What's up?",
 		"quick_topic.content_placeholder":"Insert post here",
-		"quick_topic.add_poll_option":"Poll option",
+		"quick_topic.add_poll_option_first":"Poll option #0",
 		"quick_topic.create_topic_button":"Create Topic",
 		"quick_topic.create_topic_button_short":"New Topic",
 		"quick_topic.add_poll_button":"Add Poll",
@@ -653,7 +653,8 @@
 		"topic.reply_aria":"The quick reply form",
 		"topic.reply_content":"Insert reply here",
 		"topic.reply_content_alt":"What do you think?",
-		"topic.reply_add_poll_option":"Poll option",
+		"topic.reply_add_poll_option":"Poll option #%d",
+		"topic.reply_add_poll_option_first":"Poll option #0",
 		"topic.reply_button":"Create Reply",
 		"topic.reply_add_poll_button":"Add Poll",
 		"topic.reply_add_file_button":"Add File",
