More conversations work. Add support for AS in columns for SimpleInnerJoin. Add a referrer policy to improve privacy a little. Shorten /static/ to /s/ since it comes up so much. Remove some obsolete code. Shorten some variable names. Reduce the amount of boilerplate in the patcher.
Added the RefNoTrack and RefNoRef privacy config settings.

You may need to run the updater / patcher for this commit.

--- a/langs/english.json
+++ b/langs/english.json
@@ -318,6 +318,8 @@
 		"password_reset_email_sent":"An email was sent to you. Please follow the steps within.",
 		"password_reset_token_token_verified":"Your password was successfully updated.",
 
+		"convo_dev":"Messages are currently under development. Some features may not work yet and your messages may be purged every now and then.",
+
 		"panel_forum_created":"The forum was successfully created.",
 		"panel_forum_deleted":"The forum was successfully deleted.",
 		"panel_forum_updated":"The forum was successfully updated.",
