Adjust convo permissions. Speed up convo_view.html Make ContentLines in ConvoViewRow an int as it should be. Shorten common. in the generated templates. Fix the page titles for the convo panes. Stop non-present users from editing their convo posts but still allow them to delete them, if they somehow have a way to do that. Reduce the amount of boilerplate in the currently broken guilds plugin.

--- a/langs/english.json
+++ b/langs/english.json
@@ -143,8 +143,8 @@
 		"account_logins":"Logins",
 		"account_penalties":"Penalties",
 		"account_level_list":"Level Progress",
-		"convos_head":"Conversations",
-		"convo_head":"Conversation",
+		"convos":"Conversations",
+		"convo":"Conversation",
 
 		"panel_dashboard":"Control Panel Dashboard",
 		"panel_forums":"Forum Manager",
