Show the names of the participants on the convo list instead of the placeholder text. Shorten some things to save a bit of memory and to standardise things.

--- a/langs/english.json
+++ b/langs/english.json
@@ -538,6 +538,7 @@
 
 		"convos_head":"Conversations",
 		"convo_head":"Conversation",
+		"convo_users":"Participants",
 		"create_convo_head":"Create Conversation",
 		"create_convo_button":"Create Convo",
 
