Add UseConvos permission. Use UseConvos permission instead of ban flags in convo perm checks. Stop users without the UseConvos permission from editing convo replies, although they can still delete them for privacy reasons.
Shorten some things and reduce the amount of boilerplate.
Add a few misc parser test cases.
Fix footer and tweak indentation.

--- a/langs/english.json
+++ b/langs/english.json
@@ -29,7 +29,8 @@
 		"ViewIPs":               "Can view IP addresses",
 
 		"UploadFiles": "Can upload files",
-		"UploadAvatars": "Can upload avatars"
+		"UploadAvatars": "Can upload avatars",
+		"UseConvos":"Can use conversations"
 	},
 
 	"LocalPerms": {
