--- a/langs/english.json
+++ b/langs/english.json
@@ -889,6 +889,7 @@
 		"panel_group_promotions_to":"To",
 		"panel_group_promotions_two_way":"Two Way",
 		"panel_group_promotions_level":"Level",
+		"panel_group_promotions_posts":"Posts",
 		"panel_group_promotions_create_button":"Add Promotion",
 
 		"panel_word_filters_head":"Word Filters",
