Update the group promotion UI. Invert the direction of the query to make promotions a little less exacting. Make sure admins can't set the from group as the to group in a group promotion. Shorten a field name in the word filter manager.
Add panel_group_promotions_level_prefix phrase.
Add panel_group_promotions_posts_prefix phrase.
Add panel_group_promotions_delete_button phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -884,6 +884,9 @@
 		"panel_group_update_button":"Update Group",
 		"panel_group_extended_permissions":"Extended Permissions",
 
+		"panel_group_promotions_level_prefix":"level ",
+		"panel_group_promotions_posts_prefix":"posts ",
+		"panel_group_promotions_delete_button":"Delete",
 		"panel_group_promotions_create_head":"Add Promotion",
 		"panel_group_promotions_from":"From",
 		"panel_group_promotions_to":"To",
