Fix a bug where the convos page would 404. Friendly message when there are no convos. Fix the convo input css. Hide elapsed on mobile for Nox.
Added convos_none phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -537,6 +537,7 @@
 
 		"convos_head":"Conversations",
 		"convos_create":"Create Convo",
+		"convos_none":"You don't have any conversations yet.",
 		"convo_head":"Conversation",
 		"convo_users":"Participants",
 		"create_convo_head":"Create Conversation",
