--- a/langs/english.json
+++ b/langs/english.json
@@ -699,6 +699,7 @@
 		"profile_add_friend":"Add Friend",
 		"profile_unban":"Unban",
 		"profile_ban":"Ban",
+		"profile_block":"Block",
 		"profile_report_user_tooltip":"Report User",
 		"profile_report_user_aria":"Report User",
 		"profile_ban_user_head":"Ban User",
@@ -1085,6 +1086,26 @@
 		"panel_debug_adapter_label":"Adapter",
 
 		"panel_debug_goroutine_count_label":"Goroutines",
-		"panel_debug_cpu_count_label":"CPUs"
+		"panel_debug_cpu_count_label":"CPUs",
+
+		"panel_debug_memory_stats":"Memory Statistics",
+		"panel_debug_memory_stats_sys":"Sys",
+		"panel_debug_memory_stats_heapsys":"HeapSys",
+		"panel_debug_memory_stats_heapalloc":"HeapAlloc",
+		"panel_debug_memory_stats_heapidle":"HeapIdle",
+		"panel_debug_memory_stats_heapobjects":"HeapObjects",
+		"panel_debug_memory_stats_stackinuse":"StackInuse",
+
+		"panel_debug_caches":"Caches",
+		"panel_debug_caches_topic":"Topic Cache",
+		"panel_debug_caches_user":"User Cache",
+		"panel_debug_caches_reply":"Reply Cache",
+		"panel_debug_caches_topic_list":"Topic List",
+
+		"panel_debug_database":"Database",
+		"panel_debug_database_topics":"Topics",
+		"panel_debug_database_users":"Users",
+		"panel_debug_database_replies":"Replies",
+		"panel_debug_disk":"Disk"
 	}
 }
