--- a/langs/english.json
+++ b/langs/english.json
@@ -999,6 +999,7 @@
 		"panel_logs_registration_attempt":"Attempt",
 		"panel_logs_registration_email":"email",
 		"panel_logs_registration_reason":"reason",
+		"panel_logs_registration_no_logs":"There aren't any registrations logged.",
 
 		"panel_logs_moderation_head":"Mod Action Logs",
 		"panel_logs_moderation_action_topic_stick":"<a href='%s'>%s</a> was pinned by <a href='%s'>%s</a>",
@@ -1014,11 +1015,15 @@
 		"panel_logs_moderation_action_user_unban":"<a href='%s'>%s</a> was unbanned by <a href='%s'>%s</a>",
 		"panel_logs_moderation_action_user_activate":"<a href='%s'>%s</a> was activated by <a href='%s'>%s</a>",
 		"panel_logs_moderation_action_unknown":"Unknown action '%s' on elementType '%s' by <a href='%s'>%s</a>",
+		"panel_logs_moderation_no_logs":"There aren't any events logged.",
 
 		"user_unknown":"Unknown",
 		"topic_unknown":"Unknown",
 
 		"panel_logs_administration_head":"Admin Action Logs",
+		"panel_logs_administration_action_user_edit":"User <a href='%s'>%s</a> was modified by <a href='%s'>%s</a>",
+		"panel_logs_administration_action_unknown":"Unknown action '%s' on elementType '%s' by <a href='%s'>%s</a>",
+		"panel_logs_administration_no_logs":"There aren't any events logged.",
 
 		"panel_plugins_head":"Plugins",
 		"panel_plugins_author_prefix":"Author: ",
