Finish up the adminlogs. Throw an error instead of updating a word filter that doesn't exist. Track a bit of extra data for word filter updates.
Shorten the prefixes of the adminlog phrases from panel_logs_administration_ to panel_logs_admin_
Add a bunch of new adminlog phrases.
Tweak the word filter phrases.

Add the extra column to the moderation_logs and administration_logs tables.

You need to run the updater / patcher for this commit.

--- a/langs/english.json
+++ b/langs/english.json
@@ -1024,26 +1024,36 @@
 		"page_unknown":"Unknown",
 		"setting_unknown":"unknown",
 
-		"panel_logs_administration_head":"Admin Action Logs",
-		"panel_logs_administration_action_user_edit":"User <a href='%s'>%s</a> was modified by <a href='%s'>%s</a>",
-		"panel_logs_administration_action_group_create":"Group <a href='%s'>%s</a> was created by <a href='%s'>%s</a>",
-		"panel_logs_administration_action_group_edit":"Group <a href='%s'>%s</a> was modified by <a href='%s'>%s</a>",
-		"panel_logs_administration_action_group_promotion_create":"A group promotion was created by <a href='%s'>%s</a>",
-		"panel_logs_administration_action_group_promotion_delete":"A group promotion was deleted by <a href='%s'>%s</a>",
-		"panel_logs_administration_action_forum_reorder":"Forums were reordered by <a href='%s'>%s</a>",
-		"panel_logs_administration_action_forum_create":"Forum <a href='%s'>%s</a> was created by <a href='%s'>%s</a>",
-		"panel_logs_administration_action_forum_delete":"Forum <a href='%s'>%s</a> was deleted by <a href='%s'>%s</a>",
-		"panel_logs_administration_action_forum_edit":"Forum <a href='%s'>%s</a> was modified by <a href='%s'>%s</a>",
-		"panel_logs_administration_action_page_create":"Page <a href='%s'>%s</a> was created by <a href='%s'>%s</a>",
-		"panel_logs_administration_action_page_delete":"Page <a href='%s'>%s</a> was deleted by <a href='%s'>%s</a>",
-		"panel_logs_administration_action_page_edit":"Page <a href='%s'>%s</a> was modified by <a href='%s'>%s</a>",
-		"panel_logs_administration_action_setting_edit":"Setting <a href='%s'>%s</a> was modified by <a href='%s'>%s</a>",
-		"panel_logs_administration_action_word_filter_create":"Word Filter <a href='%s'>%d</a> was created by <a href='%s'>%s</a>",
-		"panel_logs_administration_action_word_filter_delete":"Word Filter <a href='%s'>%d</a> was deleted by <a href='%s'>%s</a>",
-		"panel_logs_administration_action_word_filter_edit":"Word Filter <a href='%s'>%d</a> was modified by <a href='%s'>%s</a>",
-		"panel_logs_administration_action_backup_download":"A backup was downloaded by <a href='%s'>%s</a>",
-		"panel_logs_administration_action_unknown":"Unknown action '%s' on elementType '%s' by <a href='%s'>%s</a>",
-		"panel_logs_administration_no_logs":"There aren't any events logged.",
+		"panel_logs_admin_head":"Admin Action Logs",
+		"panel_logs_admin_action_user_edit":"User <a href='%s'>%s</a> was modified by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_group_create":"Group <a href='%s'>%s</a> was created by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_group_edit":"Group <a href='%s'>%s</a> was modified by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_group_promotion_create":"A group promotion was created by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_group_promotion_delete":"A group promotion was deleted by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_forum_reorder":"Forums were reordered by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_forum_create":"Forum <a href='%s'>%s</a> was created by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_forum_delete":"Forum <a href='%s'>%s</a> was deleted by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_forum_edit":"Forum <a href='%s'>%s</a> was modified by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_page_create":"Page <a href='%s'>%s</a> was created by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_page_delete":"Page <a href='%s'>%s</a> was deleted by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_page_edit":"Page <a href='%s'>%s</a> was modified by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_setting_edit":"Setting <a href='%s'>%s</a> was modified by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_word_filter_create":"A word filter was created by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_word_filter_delete":"A word filter was deleted by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_word_filter_edit":"A word filter was modified by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_menu_suborder":"Menu #%d was reordered by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_menu_item_edit":"Menu item <a href='%s'>#%d</a> was modified by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_menu_item_create":"Menu item <a href='%s'>#%d</a> was created by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_menu_item_delete":"Menu item <a href='%s'>#%d</a> was deleted by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_widget_edit":"Widget <a href='%s'>#%d</a> was modified by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_widget_create":"Widget <a href='%s'>#%d</a> was created by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_widget_delete":"Widget <a href='%s'>#%d</a> was deleted by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_plugin_activate":"The plugin '%s' was activated by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_plugin_deactivate":"The plugin '%s' was deactivated by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_plugin_install":"The plugin '%s' was installed by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_backup_download":"A backup was downloaded by <a href='%s'>%s</a>",
+		"panel_logs_admin_action_unknown":"Unknown action '%s' on elementType '%s' by <a href='%s'>%s</a>",
+		"panel_logs_admin_no_logs":"There aren't any events logged.",
 
 		"panel_plugins_head":"Plugins",
 		"panel_plugins_author_prefix":"Author: ",
